# ga-of-life

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml
react-app/: package-lock.json  package.json
react-app/src/: App.js
react-app/src/components/: CaRunner.js  EaGraph.js  EaRunner.js
react-app/src/workers/: EaWorker.js
src/: ca.rs  ga.rs  lib.rs  main.rs
src/ga/: binary.rs  selection.rs
www/: config-overrides.js  index.html  index.js  package-lock.json  package.json
www/public/: index.html
www/src/: App.css  App.js
www/src/components/: CaControl.js  CaGraph.js  CaRunner.js  EaControl.js  EaGraph.js  EaRunner.js  EaSettings.js  EaState.js  EaStatistics.js  GenotypePlot.js  PhenotypePlot.js
www/src/pages/: Ca.js  Ea.js  EaRunner.js  EaSetup.js  Help.js
www/src/shared/: Constants.js  utils.js
www/src/workers/: EaWorker.js
