[package]
name = "ga_of_life"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.3"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.4"
wasm-bindgen = "0.2.74"
console_error_panic_hook = "0.1.6"
